Clean up snapshot manager tests